# openai_telegram_bot_BaseFunctionality

./: .env.example  README.md  pyproject.toml
src/: openapi_client.py  utils.py
src/bot/: bot.py  handlers.py  service.py
src/resources/: main.txt
src/resources/messages/: main.txt  translate.txt  translate_output_english.txt  translate_output_french.txt  translate_output_german.txt
src/resources/prompts/: translate_english.txt  translate_french.txt  translate_german.txt
src/resources/quiz/: topic_prompts.json  topics.json
src/resources/talk/: personalities.json  personalities_images.json
src/resources/translate/: languages.json
